# opengl-3d-game-engine

./: .gitignore  CMakeLists.txt  MEC0045.txt  todo.txt
include/: Camera.h  CameraObserver.h  EBO.h  Engine.h  InputManager.h  Light.h  Material.h  Mesh.h  Model.h  ModelLoader.h  OpenGLContext.h  OrthoCamera.h  OrthographicCamera.h  RenderObject.h  Renderer.h  Scene.h  ShaderProgram.h  Texture.cpp  Texture.h  Transformable.h  TransformableComposite.h  Utils.h  VAO.h  VBO.h
include/Light/: DirectionalLight.h  Light.h  PointLight.h  SpotLight.h
include/Observer/: IObservable.h  IObserver.h  Observable.h  Observer.h  ObserverEvents.h
include/RenderObject/: RenderObject.h  RenderObjectComposite.h  RenderObjectLeaf.h
include/Transform/: Transform.h  TransformComposite.h  TransformLeaf.h
include/buffers/: EBO.h  SSBO.h  VBO.h
include/motions/: BezierMotion.h  LineMotion.h  Motion.h
include/reusable_design_patterns/Observer/: IObservable.h  IObserver.h
libs/glm/: CMakeLists.txt
libs/glm/detail/: type_quat.hpp
libs/glm/ext/: quaternion_geometric.hpp
libs/glm/gtx/: hash.hpp  matrix_decompose.inl  quaternion.hpp
libs/stb/: stb_image.h
recordings/: cube_attached_to_triangle.webm
res/: indices.h  vertices.h
res/3d_models/: plain_texture.h
res/models/float_vectors/: sky_cube.h
res/shaders/: blue.shader  green.shader  light.shader  phong.shader  red.shader  rgb.shader  texture.shader  yellow.shader
screenshots/: MEC0045_2.webm  MEC0045_4.webm
shaders/: blinn.glsl  blinn_pos_nor.glsl  blinn_texture_pos_nor_tep.glsl  blue.glsl  constant.glsl  constant_pos.glsl  constant_texture_pos.glsl  phong.glsl  texture.glsl  yellow.glsl
shaders/deprecated/: lambert.glsl  phong.glsl
src/: Camera.cpp  DirectionalLight.cpp  EBO.cpp  Engine.cpp  InputManager.cpp  Light.cpp  Model.cpp  OpenGLContext.cpp  OrthoCamera.cpp  OrthographicCamera.cpp  PointLight.cpp  RenderObject.cpp  RenderObjectComposite.cpp  RenderObjectLeaf.cpp  Renderer.cpp  SSBO.cpp  Scene.cpp  ShaderProgram.cpp  SpotLight.cpp  Texture.cpp  Transform.cpp  TransformComposite.cpp  TransformLeaf.cpp  TransformableComposite.cpp  VAO.cpp  VBO.cpp  main.cpp
